--- a/MODULE 2.html
+++ b/MODULE 2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./module 2.css">
 </head>
 <body>
-    <!-- <section> -->
+    <section>
         <nav>
             <img src="./HTML Practice Assets/FES.svg" class="logo" alt="FES Logo">
             <ul>
@@ -18,19 +18,17 @@
         </nav>
         <header>
             <div class="row">
-                <div>
+                <div class="landing__description">
                     <h1>Best place to learn Frontend</h1>
                     <p class="subheader">Go from absolute beginner to pro with a simplified process</p>
                     <button>Start Now</button>
                 </div>
-                
-                <figure>
+                <figure class="landing__img">
                     <img src="./HTML Practice Assets/laptop.png" alt="Home page image">
                 </figure>
             </div>
-        </div>
         </header>
-    <!-- </section> -->
+    </section>
 
 <main>
     <section id="about">
